--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Exam</title>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="shortcut icon" href="icons/logo.png" type="image/x-icon">
 </head>
 <body>
     <div class="headers">
@@ -25,22 +26,20 @@
             <tbody>
                 <tr>
                     <td>001</td>
-                    <td>fina</td>
-                    <td>fina</td>
+                    <td rowspan="3">https://finalexamapi.herokuapp.com/</td>
+                    <td>https://finalexamapi.herokuapp.com/api/teachers</td>
                     <td>/api/teachers</td>
                     <td><a href="/api/teachers" class="view" target="_blank">View Data</a></td>
                 </tr>
                 <tr>
                     <td>002</td>
-                    <td>fina</td>
-                    <td>fina</td>
+                    <td>https://finalexamapi.herokuapp.com/api/students/2021a</td>
                     <td>/api/students/2021a</td>
-                    <td><a href="/api/teachers" class="view" target="_blank">View Data</a></td>
+                    <td><a href="/api/students/2021a" class="view" target="_blank">View Data</a></td>
                 </tr>
                 <tr>
                     <td>003</td>
-                    <td>fina</td>
-                    <td>fina</td>
+                    <td>https://finalexamapi.herokuapp.com/api/students/2021b</td>
                     <td>/api/students/2021b</td>
                     <td><a href="/api/students/2021b" class="view" target="_blank">View Data</a></td>
                 </tr>
