--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="headers">
-        <h1>Final exam</h1>
+        <h1><span>Final</span> exam</h1>
     </div>
     <div class="request">
         <table>
@@ -26,19 +26,21 @@
             <tbody>
                 <tr>
                     <td>001</td>
-                    <td rowspan="3">https://finalexamapi.herokuapp.com/</td>
+                    <td>https://finalexamapi.herokuapp.com/</td>
                     <td>https://finalexamapi.herokuapp.com/api/teachers</td>
                     <td>/api/teachers</td>
                     <td><a href="/api/teachers" class="view" target="_blank">View Data</a></td>
                 </tr>
                 <tr>
                     <td>002</td>
+                    <td>https://finalexamapi.herokuapp.com/</td>
                     <td>https://finalexamapi.herokuapp.com/api/students/2021a</td>
                     <td>/api/students/2021a</td>
                     <td><a href="/api/students/2021a" class="view" target="_blank">View Data</a></td>
                 </tr>
                 <tr>
                     <td>003</td>
+                    <td>https://finalexamapi.herokuapp.com/</td>
                     <td>https://finalexamapi.herokuapp.com/api/students/2021b</td>
                     <td>/api/students/2021b</td>
                     <td><a href="/api/students/2021b" class="view" target="_blank">View Data</a></td>
