--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div class="headers">
-        <h1><span>Final</span> exam</h1>
+        <h1>👩🏽‍💻<span>Final</span> exam</h1>
     </div>
     <div class="request">
         <table>
             <thead>
                 <tr>
-                    <th>No</th>
+                    <th>💜</th>
                     <th>Root End Point</th>
                     <th>End Point</th>
                     <th>Path</th>
