--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Login Done</h1>
+    <div class="container">
+        <div class="card">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, fugit.</p>
+        </div>
+    </div>
+
 </body>
 </html>
